--- a/main.css
+++ b/main.css
@@ -13,14 +13,18 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr, 3fr;
+    padding: 20px;
+}
+.grid-a-container-small {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
+    padding: 20px;
 }
 .grid-a-item {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.grid-a-container {
-    padding: 20px;
 }
 .grid-a-item {
     text-align: center;
